fix grammar.  remove letter spacing

--- a/adoff/mobile.css
+++ b/adoff/mobile.css
@@ -3,7 +3,6 @@
     
     * {
         font-size: 3.5vw;
-        letter-spacing: -1px;
     }
 
     li {
